--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_LoginPartial.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_LoginPartial.cshtml
@@ -7,10 +7,10 @@
     @if (SignInManager.IsSignedIn(User))
     {
         <li class="nav-item">
-            <a class="nav-link text-dark nav pull-right" asp-controller="Users" asp-action="UserPosts">My Posts</a>
+            <a class="nav-link text-dark nav pull-right" asp-area="" asp-controller="Users" asp-action="UserPosts">My Posts</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-dark nav pull-right" asp-controller="Posts" asp-action="Add">Add post</a>
+            <a class="nav-link text-dark nav pull-right" asp-area="" asp-controller="Posts" asp-action="Add">Add post</a>
         </li>
         <li class="nav-item">
             <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
