--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Posts/ViewPost.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Posts/ViewPost.cshtml
@@ -3,7 +3,6 @@
 @{
     ViewData["Title"] = "View Post";
     var userUsername = this.User.Identity.Name;
-    var lastCommentMadeOn = string.IsNullOrEmpty(Model.LastCommentDateAndTime) ? "" : $"Last comment made on: {Model.LastCommentDateAndTime} UTC";
 }
 
 
@@ -102,12 +101,12 @@
 <div class="container mt-5 mb-5">
     <div class="d-flex justify-content-center row">
         <div class="d-flex flex-column col-md-8">
-            <div class="d-flex flex-row align-items-center text-left comment-top p-2 bg-white border-bottom px-4">
+            <div class="d-flex flex-row justify-content-center comment-top p-2 bg-white border-bottom px-4">
                 <div class="d-flex flex-column-reverse flex-grow-0 align-items-center votings ml-1"></div>
                 <div class="d-flex flex-column ml-3">
                     <div class="d-flex flex-row post-title">
                     </div>
-                    <div class="d-flex flex-row align-items-center align-content-center post-title"><span class="mr-2 comments">@Model.CommentsCount comments&nbsp;</span><span class="mr-2 dot"></span><span>@lastCommentMadeOn</span></div>
+                    <div class="d-flex flex-row align-items-center align-content-center post-title"><span class="mr-2 comments">@Model.CommentsCount comments&nbsp;</span></div>
                 </div>
             </div>
             <div class="coment-bottom bg-white p-2 px-4">
