--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Posts/ViewPost.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Posts/ViewPost.cshtml
@@ -3,60 +3,15 @@
 @{
     ViewData["Title"] = "View Post";
     var userUsername = this.User.Identity.Name;
+    @Html.HiddenFor(x => x.PostId)
 }
 
 
-
-
+<link rel="stylesheet" href="~/css/comments.css" />
 <link rel="stylesheet" href="~/css/postsAll.css" />
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 
 <style>
-
-    body {
-        background: #eee
-    }
-
-    .bdge {
-        height: 21px;
-        background-color: orange;
-        color: #fff;
-        font-size: 11px;
-        padding: 8px;
-        border-radius: 4px;
-        line-height: 3px
-    }
-
-    .comments {
-        text-decoration: underline;
-        text-underline-position: under;
-        cursor: pointer
-    }
-
-    .dot {
-        height: 7px;
-        width: 7px;
-        margin-top: 3px;
-        background-color: #bbb;
-        border-radius: 50%;
-        display: inline-block
-    }
-
-    .hit-voting:hover {
-        color: blue
-    }
-
-    .hit-voting {
-        cursor: pointer
-    }
-
-    .servicedrop {
-        transition-delay: 1s
-    }
-
-    .action-collapse {
-        cursor: pointer
-    }
 </style>
 
 <div class="container-fluid mt-100">
@@ -127,7 +82,8 @@
                     </div>
                 }
                 <div class="collapsable-comment">
-                    <div class="d-flex flex-row justify-content-between align-items-center action-collapse p-2" data-toggle="collapse" aria-expanded="false" aria-controls="collapse-1" href="#collapse-1"><span>Comments</span><i id="serviceDrop" class="fa fa-chevron-down servicedrop"></i>
+                    <div class="d-flex flex-row justify-content-between align-items-center action-collapse p-2" data-toggle="collapse" aria-expanded="false" aria-controls="collapse-1" href="#collapse-1">
+                        <span>Comments</span><i id="serviceDrop" class="fa fa-chevron-down servicedrop"></i>
                     </div>
                     <div id="collapse-1" class="collapse">
                         @*-------------COMMENT--------------*@
@@ -144,66 +100,3 @@
     </div>
 </div>
 
-@* I know this js is ugly but I know no JS or jQuery... yet*@
-@section Scripts{
-    <script>
-        $("button#sendComment").click(function (e) {
-            e.preventDefault();
-            var token = $("#commentsForm [name=__RequestVerificationToken]").val();
-            var data = {
-        CommentText: $("input#comment").val()
-        , PostId: '@Model.PostId'
-            };
-
-            function postComment() {
-                $.ajax({
-                    type: 'POST',
-                    contentType: 'application/json',
-                    url: '/api/comments',
-                    data: JSON.stringify(data),
-                    dataType: "json",
-                    headers: { 'X-CSRF-TOKEN': token },
-                    success: function (returnData) {
-                        let commentCountPlus1 = parseInt($("span#commentCount").text()) + 1;
-                        $("span#commentCount").text(commentCountPlus1);
-                        var el = document.getElementById('serviceDrop');
-                        $("input#comment").val(''),
-                            $('.collapse').collapse('show')
-                        if (el.classList.contains('fa-chevron-up')) {
-                            $('<div class="d-flex flex-row align-items-center commented-user"><h5 class="mb-1 mt-1">' + returnData.username + '<span class="dot mr-2 ml-2 mb-1 mt-1"></span>' + '<h6 class="font-weight-normal font-italic mt-2">' + returnData.createdOnAsString + '</h6>' +'</h5></div ><div class="comment-text-sm"><span>' + returnData.commentText + '</span></div>').prependTo('.commentsArray');
-                        }
-
-                    }
-                });
-            };
-
-            postComment();
-    });
-    </script>
-
-    <script>
-
-        $(document).ready(function () {
-            $('#collapse-1').on('shown.bs.collapse', function () {
-                 $.getJSON('/api/comments', { postId: '@Model.PostId' },
-                    function (comments) {
-                        for (var i = 0; i < comments.length; i++) {
-                            var currentComment = (comments[i].content);
-                            var currentCommentAuthor = comments[i].commentAuthor;
-                            var createdOn = comments[i].createdOnAsString;
-
-                            $('<div class="d-flex flex-row align-items-center commented-user"><h5 class="mb-1 mt-1">' + currentCommentAuthor + '<span class="dot mr-2 ml-2 mb-1 mt-1"></span>' + '<h6 class="font-weight-normal font-italic mt-2">' + createdOn + '</h6>' + '</h5></div ><div class="comment-text-sm"><span>' + currentComment + '</span></div>').appendTo('.commentsArray');
-                        }
-                    }
-                )
-                $(".servicedrop").addClass('fa-chevron-up').removeClass('fa-chevron-down');
-            });
-            $('#collapse-1').on('hidden.bs.collapse', function () {
-                $(".servicedrop").addClass('fa-chevron-down').removeClass('fa-chevron-up');
-                $("div.comment-text-sm").remove();
-                $("div.commented-user").remove();
-            });
-        });
-    </script>
-
-}
