implemented showing trash icon for comments only for admin users and author personal comments

--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Posts/ViewPost.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Posts/ViewPost.cshtml
@@ -5,7 +5,8 @@
     var userUsername = this.User.Identity.Name;
     @Html.HiddenFor(x => x.PostId)
 }
-
+<input type="hidden" value="@this.User.Identity.Name" id="currentUserUsername" />
+<input type="hidden" value="@this.User.IsInRole("Administrator").ToString()" id="isAdmin" />
 
 <link rel="stylesheet" href="~/css/comments.css" />
 <link rel="stylesheet" href="~/css/postsAll.css" />
