--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_LoginPartial.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_LoginPartial.cshtml
@@ -14,6 +14,7 @@
                 <a class="dropdown-item" asp-area="" asp-controller="Posts" asp-action="Add">Add post</a>
                 <a class="dropdown-item" asp-area="" asp-controller="Users" asp-action="UserPosts">My Posts</a>
                 <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Manage account</a>
+                <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                 <div class="dropdown-divider"></div>
                 <form class="dropdown-item" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
                     <button type="submit" class="nav-link btn btn-link text-danger">Logout</button>
