added admin area added migration Migrations/20211027073042_Post-Report-And-Report-Reason-Added.Designer.cs added post report and report reason properties added post editing and deleting and reporting from within post itself

--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_CookieConsentPartial.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_CookieConsentPartial.cshtml
@@ -11,7 +11,7 @@
     <div id="cookieConsent" class="alert alert-info alert-dismissible fade show" role="alert">
         Check out this cool looking cookie policy banner, not bad huh. <a asp-controller="Home" asp-action="Privacy">Learn More</a>.
         <button type="button" class="accept-policy close" data-dismiss="alert" aria-label="Close" data-cookie-string="@cookieString">
-            <span aria-hidden="true">Accept</span>
+            <span class="ml-1" aria-hidden="true">Accept</span>
         </button>
     </div>
     <script>
