--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Posts/ViewPost.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Posts/ViewPost.cshtml
@@ -1,5 +1,6 @@
 ﻿@model ASP.NET_MVC_Forum.Models.Post.ViewPostViewModel;
-@using System.Security.Claims;
+@using static ASP.NET_MVC_Forum.Data.DataConstants.RoleConstants;
+
 @{
     ViewData["Title"] = "View Post";
     var userUsername = this.User.Identity.Name;
@@ -44,7 +45,38 @@
                             <div><strong>@Model.UserPostsCount</strong> posts</div>
                         </div>
                     </div>
+                    <div class="text-center">
+                        @if (this.User.Identity.Name == Model.UserIdentityUserUsername || this.User.IsInRole(AdminRoleName))
+                        {
+                            <button type="button" class="btn btn-danger m-1" data-toggle="modal" data-target="#exampleModalCenter-@Model.PostId">
+                                Delete
+                            </button>
+                            <button type="button" class="btn btn-primary m-1" data-toggle="modal" data-target="#exampleModalCenter-@Model.PostId">
+                                Report
+                            </button>
+                            <div class="modal fade" id="exampleModalCenter-@Model.PostId" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                                <div class="modal-dialog modal-dialog-centered" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="exampleModalLongTitle">Are you sure you want to delete this post ?</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-danger" data-dismiss="modal">No</button>
+                                            <form asp-action="Delete" asp-controller="Posts" asp-route-postId="@Model.PostId" asp-route-postTitle="@Model.Title" method="post">
+                                                <input type="submit" class="btn btn-success" value="Yes" />
+                                            </form>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <a type="button" class="btn btn-warning m-1" asp-action="Edit" asp-controller="Posts" asp-route-postId="@Model.PostId">Edit</a>
+                        }
+                    </div>
                 </div>
+
             </div>
         </div>
     </div>
