--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_PostsPreviewPartial.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_PostsPreviewPartial.cshtml
@@ -9,71 +9,65 @@
     </div>
 }
 
-@foreach (var item in Model)
-{
-    <div class="container mt-100">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="card mb-4 mt-4">
-                    <div class="card-footer align-items-center px-0 pt-0 pb-3">
-                        <div class="px-2 pt-3 text-center">
-                            <a class="text-dark font-weight-bolder font-italic" asp-action="ViewPost" asp-controller="Posts" asp-route-postId="@item.PostId" asp-route-postTitle="@item.Title ">@item.Title</a>
+<div class="row">
+    @foreach (var item in Model)
+    {
+        <div class="col-sm-12 col-md-6 col-lg-4">
+            <div class="card mb-4 mt-4" >
+                <div class="card-footer align-items-center px-0 pt-0 pb-3">
+                    <div class="px-2 pt-3 text-center">
+                        <a class="text-dark font-weight-bolder font-italic" asp-action="ViewPost" asp-controller="Posts" asp-route-postId="@item.PostId" asp-route-postTitle="@item.Title ">@item.Title</a>
+                    </div>
+                </div>
+                <div class="card-body mb-2" style="max-height:230px">
+                    <a class="text-dark" asp-action="ViewPost" asp-controller="Posts" asp-route-postId="@item.PostId" asp-route-postTitle="@item.Title">@Html.Raw(item.ShortDescription)</a>
+                </div>
+                <div class="card-header">
+                    <div class="media flex-wrap w-100 align-items-center">
+                        <img src="~/img/defaultUserImage.png" class="d-block ui-w-40 rounded-circle" alt="">
+
+                        <div class="media-body ml-3">
+                            <a href="javascript:void(0)" data-abc="true">@item.UserUsername</a>
+                            <div class="text-muted small">@item.PostCreationDate</div>
+                        </div>
+                        <div class="text-muted small ml-3">
+                            <div>Member since <strong>@item.UserMemberSince</strong></div>
+                            <div><strong>@item.UserPostsCount</strong> posts</div>
                         </div>
                     </div>
-                    <div class="card-body">
-                        <a class="text-dark" asp-action="ViewPost" asp-controller="Posts" asp-route-postId="@item.PostId" asp-route-postTitle="@item.Title">@Html.Raw(item.ShortDescription)</a>
-                    </div>
 
-                    <div class="card-header">
-                        <div class="media flex-wrap w-100 align-items-center">
-                            <img src="~/img/defaultUserImage.png" class="d-block ui-w-40 rounded-circle" alt="">
-
-                            <div class="media-body ml-3">
-                                <a href="javascript:void(0)" data-abc="true">@item.UserUsername</a>
-                                <div class="text-muted small">@item.PostCreationDate</div>
-                            </div>
-                            <div class="text-muted small ml-3">
-                                <div>Member since <strong>@item.UserMemberSince</strong></div>
-                                <div><strong>@item.UserPostsCount</strong> posts</div>
-                            </div>
-                        </div>
-
-                        <div class="text-center">
-                            @if (this.User.Identity.Name == item.UserIdentityUserUsername || this.User.IsInRole(AdminRoleName))
-                            {
-                                <button type="button" class="btn btn-danger m-1" data-toggle="modal" data-target="#exampleModalCenter-@item.PostId">
-                                    Delete
-                                </button>
-                                <button type="button" class="btn btn-primary m-1" data-toggle="modal" data-target="#exampleModalCenter-@item.PostId">
-                                    Report
-                                </button>
-                                <div class="modal fade" id="exampleModalCenter-@item.PostId" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-                                    <div class="modal-dialog modal-dialog-centered" role="document">
-                                        <div class="modal-content">
-                                            <div class="modal-header">
-                                                <h5 class="modal-title" id="exampleModalLongTitle">Are you sure you want to delete this post ?</h5>
-                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                    <span aria-hidden="true">&times;</span>
-                                                </button>
-                                            </div>
-                                            <div class="modal-footer">
-                                                <button type="button" class="btn btn-danger" data-dismiss="modal">No</button>
-                                                <form asp-action="Delete" asp-controller="Posts" asp-route-postId="@item.PostId" asp-route-postTitle="@item.Title" method="post">
-                                                    <input type="submit" class="btn btn-success" value="Yes" />
-                                                </form>
-                                            </div>
+                    <div class="text-center">
+                        @if (this.User.Identity.Name == item.UserIdentityUserUsername || this.User.IsInRole(AdminRoleName))
+                        {
+                            <button type="button" class="btn btn-danger m-1" data-toggle="modal" data-target="#exampleModalCenter-@item.PostId">
+                                Delete
+                            </button>
+                            <button type="button" class="btn btn-primary m-1" data-toggle="modal" data-target="#exampleModalCenter-@item.PostId">
+                                Report
+                            </button>
+                            <div class="modal fade" id="exampleModalCenter-@item.PostId" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                                <div class="modal-dialog modal-dialog-centered" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="exampleModalLongTitle">Are you sure you want to delete this post ?</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-danger" data-dismiss="modal">No</button>
+                                            <form asp-action="Delete" asp-controller="Posts" asp-route-postId="@item.PostId" asp-route-postTitle="@item.Title" method="post">
+                                                <input type="submit" class="btn btn-success" value="Yes" />
+                                            </form>
                                         </div>
                                     </div>
                                 </div>
-                                <a type="button" class="btn btn-warning m-1" asp-action="Edit" asp-controller="Posts" asp-route-postId="@item.PostId">Edit</a>
-                            }
-                        </div>
+                            </div>
+                            <a type="button" class="btn btn-warning m-1" asp-action="Edit" asp-controller="Posts" asp-route-postId="@item.PostId">Edit</a>
+                        }
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-}
-
-
-
+    }
+</div>
