--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_LoginPartial.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_LoginPartial.cshtml
@@ -11,6 +11,10 @@
                 Hello <span class="font-italic">@User.Identity.Name</span>!
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                @if (User.IsInRole("Administrator"))
+                {
+                    <a class="dropdown-item" asp-area="Admin" asp-controller="Home" asp-action="Index">Admin Dashboard</a>
+                }
                 <a class="dropdown-item" asp-area="" asp-controller="Posts" asp-action="Add">Add post</a>
                 <a class="dropdown-item" asp-area="" asp-controller="Users" asp-action="UserPosts">My Posts</a>
                 <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Manage account</a>
