updated admin area home view

--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/Home/Index.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/Home/Index.cshtml
@@ -34,25 +34,10 @@
             <div class="sb-sidenav-menu">
                 <div class="nav">
                     <div class="sb-sidenav-menu-heading">Core</div>
-                    <a class="nav-link" href="index.html">
+                    <a class="nav-link" href="/Admin">
                         <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                         Dashboard
                     </a>
-                    @*=======POSTS========*@
-                    <div class="sb-sidenav-menu-heading">Manage</div>
-                    <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePosts" aria-expanded="false" aria-controls="collapseLayouts">
-                        <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
-                        Posts
-                        <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
-                    </a>
-                    <div class="collapse" id="collapsePosts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
-                        <nav class="sb-sidenav-menu-nested nav">
-                            <a class="nav-link" href="layout-static.html">Visible</a>
-                            <a class="nav-link" href="layout-sidenav-light.html">Deleted</a>
-                        </nav>
-                    </div>
-                    @*=======POSTS========*@
-
                     @*=======Comments========*@
                     <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseComments" aria-expanded="false" aria-controls="collapseComments">
                         <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
@@ -76,23 +61,23 @@
                     </a>
                     <div class="collapse" id="collapseUsers" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                         <nav class="sb-sidenav-menu-nested nav">
-                            <a class="nav-link" href="layout-static.html">Visible</a>
-                            <a class="nav-link" href="layout-sidenav-light.html">Deleted</a>
+                            <a class="nav-link" href="layout-static.html">Active</a>
+                            <a class="nav-link" href="layout-sidenav-light.html">Banned</a>
                         </nav>
                     </div>
                     @*=======Users========*@
 
                     @*=======Reports========*@
 
-                    <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseUsers" aria-expanded="false" aria-controls="collapseLayouts">
+                    <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseReports" aria-expanded="false" aria-controls="collapseLayouts">
                         <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
-                        Users
+                        Reports
                         <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                     </a>
-                    <div class="collapse" id="collapseUsers" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
+                    <div class="collapse" id="collapseReports" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                         <nav class="sb-sidenav-menu-nested nav">
-                            <a class="nav-link" href="layout-static.html">Visible</a>
-                            <a class="nav-link" href="layout-sidenav-light.html">Deleted</a>
+                            <a class="nav-link" href="layout-static.html">Active</a>
+                            <a class="nav-link" href="layout-sidenav-light.html">Resolved</a>
                         </nav>
                     </div>
                     @*=======Reports========*@
